syntax = "proto3";
package assetmantle.schema.ids.base;

import "gogoproto/gogo.proto";
import "ids/base/asset_id.proto";
import "ids/base/classification_id.proto";
import "ids/base/data_id.proto";
import "ids/base/hash_id.proto";
import "ids/base/identity_id.proto";
import "ids/base/maintainer_id.proto";
import "ids/base/order_id.proto";
import "ids/base/property_id.proto";
import "ids/base/split_id.proto";
import "ids/base/string_id.proto";

message AnyID {
  option (gogoproto.goproto_getters) = false;

  oneof impl {
    AssetID asset_i_d = 1;
    ClassificationID classification_i_d = 2;
    DataID data_i_d = 3;
    HashID hash_i_d = 4;
    IdentityID identity_i_d = 5;
    MaintainerID maintainer_i_d = 6;
    OrderID order_i_d = 7;
    PropertyID property_i_d = 8;
    SplitID split_i_d = 9;
    StringID string_i_d = 10;
  }
}